--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -18,5 +18,7 @@ jobs:
       with:
         node-version: '20'
     - run: PORT=${{ secrets.PORT }} node server.js
+      env:
+        EB_S3_BUCKET: ${{ secrets.PORT }}
     - run: curl 'http://localhost:5000'
   
