--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-    # - run: PORT=${{ secrets.PORT }} node server.js & sleep 5
-    #   env:
-    #     EB_S3_BUCKET: ${{ secrets.PORT }}
+    - run: node server.js & sleep 5
+      env:
+        PORT: ${{ secrets.PORT }}
     - run: curl -f 'http://localhost:5000'
   
